--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -27,6 +27,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eae41837-ecc6-4c30-a570-d6059a0d5f75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import better_exceptions\n",
+    "import sys\n",
+    "ip = get_ipython()\n",
+    "def custom_exc(shell, etype, evalue, tb, tb_offset=None):\n",
+    "    better_exceptions.excepthook(etype, evalue, tb)\n",
+    "ip.set_custom_exc((Exception,), custom_exc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ec783de-b455-4e8a-bf84-a5b31bd76926",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "29cef8c8-3b23-4903-97b8-ad172c2153eb",
    "metadata": {},
    "outputs": [],
@@ -66,21 +89,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "15ab21f7-4171-4efa-b055-70ea2c36342a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfe4558f-669d-47af-bc49-1adc7529c03b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cb40e39-f776-4efa-9017-823052d7d60f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ab08f871-591e-4916-96ae-86fd2e2299a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
     "\n",
+    "'''\n",
     "def scanorama(dataset, dim = 2):\n",
     "    dataset = scalp.pca.pca(dataset)\n",
     "    dataset = scalp.mnn.scanorama(dataset)\n",
     "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
     "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='scanorama', dim= dim)\n",
     "    return scalp.transform.stack(dataset)\n",
-    "\n",
     "st = scanorama(dataset)\n",
-    "sc.pl.umap(st, color=['batch', 'label'])"
+    "sc.pl.umap(st, color=['batch', 'label'])\n",
+    "'''\n",
+    "\n",
+    "st = scalp.mnn.scanorama(dataset, dim=10) \n",
+    "scalp.plot(st,'scanorama', color=['batch','label'])\n"
    ]
   },
   {
@@ -99,6 +150,9 @@
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
+    "\n",
+    "\n",
+    "\n",
     "def umaponly(dataset,dim=2):\n",
     "    dataset = scalp.pca.pca(dataset)\n",
     "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
@@ -106,7 +160,13 @@
     "    return scalp.transform.stack(dataset)\n",
     "    \n",
     "stack = umaponly(dataset)\n",
-    "sc.pl.umap(stack, color=['batch', 'label'])"
+    "sc.pl.umap(stack, color=['batch', 'label'])\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "st = scalp.mnn.umaponly(dataset, dim=2)\n",
+    "scalp.plot(st,'scanorama', color=['batch','label'])\n",
+    "'''"
    ]
   },
   {
@@ -550,6 +610,18 @@
     "plt.figure(figsize=(10, 2), dpi=100)\n",
     "plt.title('Critical difference diagram of average score ranks')\n",
     "sp.critical_difference_diagram(avg_rank, test_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "498ebf0b-9e5d-4b25-b4a4-ae663bd5f118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d={4:99}\n",
+    "d.setdefault(4,5)\n",
+    "print(d)"
    ]
   }
  ],
