--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -114,7 +114,7 @@
     "sc.pl.umap(st, color=['batch', 'label'])\n",
     "'''\n",
     "\n",
-    "st = scalp.mnn.scanorama(dataset, dim=10) \n",
+    "st = scalp.mnn.scanorama(dataset) \n",
     "scalp.plot(st,'scanorama', color=['batch','label'])\n"
    ]
   },
