refator: 2 competitor methods

--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -137,20 +137,20 @@
     "\n",
     "\n",
     "\n",
+    "'''\n",
     "def umaponly(dataset,dim=2):\n",
     "    dataset = scalp.pca.pca(dataset)\n",
     "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
     "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='pca40', dim =dim)\n",
     "    return scalp.transform.stack(dataset)\n",
-    "    \n",
     "stack = umaponly(dataset)\n",
     "sc.pl.umap(stack, color=['batch', 'label'])\n",
+    "'''  \n",
     "\n",
     "\n",
-    "'''\n",
-    "st = scalp.mnn.umaponly(dataset, dim=2)\n",
-    "scalp.plot(st,'scanorama', color=['batch','label'])\n",
-    "'''"
+    "# st = scalp.mnn.umaponly(dataset, dim=2)\n",
+    "# st.obsm['umaponly'] = st.obsm['']\n",
+    "scalp.plot(st,'pca40', color=['batch','label'])"
    ]
   },
   {
@@ -161,6 +161,8 @@
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
+    "\n",
+    "'''\n",
     "def bbknn(dataset, dim = 2):\n",
     "    dataset = scalp.pca.pca(dataset)\n",
     "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
@@ -169,7 +171,11 @@
     "    return stack\n",
     "\n",
     "stack = bbknn(dataset)\n",
-    "sc.pl.umap(stack, color=['batch', 'label'])"
+    "sc.pl.umap(stack, color=['batch', 'label'])\n",
+    "'''\n",
+    "\n",
+    "st = scalp.mnn.bbknnwrap(dataset) \n",
+    "scalp.plot(st,'bbknn', color=['batch','label'])"
    ]
   },
   {
@@ -188,13 +194,19 @@
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
+    "'''\n",
     "def combat(dataset, dim = 2):\n",
     "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
     "    dataset = scalp.mnn.combat(dataset)\n",
     "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='combat', dim =dim)\n",
     "    return scalp.transform.stack(dataset)\n",
     "stack= combat(dataset)\n",
-    "sc.pl.umap(stack, color=['batch', 'label'])"
+    "sc.pl.umap(stack, color=['batch', 'label'])\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "st = scalp.mnn.combat(dataset) \n",
+    "scalp.plot(st,'combat', color=['batch','label'])"
    ]
   },
   {
