--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -619,6 +619,22 @@
     "d.setdefault(4,5)\n",
     "print(d)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf54ea2c-6702-49ef-a464-8f08f50e4eaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.sparse import csr_matrix\n",
+    "import numpy as np\n",
+    "random_matrix = np.random.rand(10, 10)\n",
+    "mask = np.random.rand(10, 10) > 0.5\n",
+    "testmat = random_matrix * mask\n",
+    "\n",
+    "testmat"
+   ]
   }
  ],
  "metadata": {
