horizon cutoff implemented, doesnt work

--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -14,9 +14,8 @@
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
     "mpl.rc(\"figure\", dpi=100)\n",
-    "from warnings import simplefilter\n",
-    "# ignore all future warnings\n",
-    "simplefilter(action='ignore')\n",
+    "import warnings\n",
+    "\n",
     "import scalp\n",
     "from scalp.output import draw\n",
     "import lmz\n",
@@ -31,12 +30,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import better_exceptions\n",
-    "import sys\n",
-    "ip = get_ipython()\n",
-    "def custom_exc(shell, etype, evalue, tb, tb_offset=None):\n",
-    "    better_exceptions.excepthook(etype, evalue, tb)\n",
-    "ip.set_custom_exc((Exception,), custom_exc)"
+    "\n",
+    "if True:\n",
+    "    import better_exceptions\n",
+    "    import sys\n",
+    "    ip = get_ipython()\n",
+    "    def custom_exc(shell, etype, evalue, tb, tb_offset=None):\n",
+    "        better_exceptions.excepthook(etype, evalue, tb)\n",
+    "    ip.set_custom_exc((Exception,), custom_exc)\n",
+    "\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "warnings.filterwarnings(\"ignore\", module=\"anndata\")"
    ]
   },
   {
@@ -237,31 +242,29 @@
     "from scipy.sparse import csr_matrix\n",
     "\n",
     "def Scalp(dataset, dim = 2):\n",
-    "    parm = {'neighbors_total': 30, 'intra_neighbors_mutual': False,\n",
-    "            'neighbors_intra_fraction': .3, 'add_tree': False, \"epsilon\":1e-4,\n",
-    "                  'copy_lsa_neighbors': False, \n",
-    "            'inter_outlier_threshold': 0.9, \n",
+    "    parm = {'neighbors_total': 40, 'intra_neighbors_mutual': False,\n",
+    "            'neighbors_intra_fraction': .3, 'add_tree': False, \"epsilon\":-1,\n",
+    "                  'copy_lsa_neighbors': False, 'horizonCutoff':10,\n",
+    "            'inter_outlier_threshold': -1, \n",
     "            'inter_outlier_probabilistic_removal': False}\n",
     "    bestparm = {'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_probabilistic_removal': False, \n",
     "            'inter_outlier_threshold': 0.7433835019772639, 'intra_neighbors_mutual': True, \n",
     "                'neighbors_intra_fraction': 0.5689801219518802, 'neighbors_total': 31.0}\n",
     "    \n",
     "    # parm = {'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_probabilistic_removal': False,  'inter_outlier_threshold': 0.72, 'intra_neighbors_mutual': False, 'neighbors_intra_fraction': 0, 'neighbors_total': 1}\n",
-    "    dataset, grap = scalp.mkgraph(dataset,**parm)\n",
+    "    grap = scalp.mkgraph(dataset,**parm)\n",
     "    # neggraph = sgraph.negstuff(dataset,**parm)\n",
     "    # scalp.umapwrap.graph_jax(dataset,(csr_matrix(grap), csr_matrix(neggraph)),label = 'umap', n_components = 2)\n",
-    "    \n",
     "    plt.matshow(grap.todense())\n",
     "    \n",
-    "    dataset = scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
-    "    \n",
+    "    projection  = scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
     "    # scalp.umapwrap.graph_pacmap(dataset,csr_matrix(grap).toarray(),label = 'umap', n_components = dim)\n",
-    "    \n",
     "    # scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim) # THIS IS WHAT WE WANT TO USE I GUESS\n",
-    "    return scalp.transform.stack(dataset)\n",
+    "    dataset.obsm['scalp']= projection\n",
+    "    return dataset\n",
     "\n",
     "stack = Scalp(dataset)\n",
-    "sc.pl.umap(stack, color=['batch', 'label'])"
+    "scalp.plot(st,'scalp', color=['batch','label'])"
    ]
   },
   {
@@ -270,7 +273,9 @@
    "id": "cc9e7a6d-586e-4f09-9e19-634e8d6d00ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset"
+   ]
   },
   {
    "cell_type": "code",
