cleaning the optimization

--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "#datasets = scalp.data.loaddata_scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 1000 )\n",
     "\n",
-    "datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 1000 ))\n",
+    "datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 300 ))\n",
     "dataset = datasets[-1] # this is the pancreatic"
    ]
   },
@@ -179,7 +179,7 @@
     "sc.pl.umap(stack, color=['batch', 'label'])\n",
     "'''\n",
     "\n",
-    "st = scalp.mnn.bbknnwrap(dataset) \n",
+    "st = scalp.mnn.bbknnwrap(dataset, dim =2) \n",
     "scalp.plot(st,'bbknn', color=['batch','label'])"
    ]
   },
@@ -228,7 +228,9 @@
    "id": "bd17d3e4-abc6-430b-8215-d6b1f2154a85",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scalp.plot(st, color=['batch','label'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -242,20 +244,30 @@
     "from scipy.sparse import csr_matrix\n",
     "\n",
     "def Scalp(dataset, dim = 2):\n",
-    "    parm = {'neighbors_total': 40, 'intra_neighbors_mutual': False,\n",
-    "            'neighbors_intra_fraction': .3, 'add_tree': False, \"epsilon\":-1,\n",
-    "                  'copy_lsa_neighbors': False, 'horizonCutoff':10,\n",
-    "            'inter_outlier_threshold': -1, \n",
+    "    parm = {'neighbors_total': 60, 'intra_neighbors_mutual': False,\n",
+    "            'neighbors_intra_fraction': .33, 'add_tree': False, \"epsilon\":-1,\n",
+    "                  'copy_lsa_neighbors': False, 'horizonCutoff':0, # this hz cutoff is what we look at \n",
+    "            'inter_outlier_threshold': -1, 'distance_metric':'euclidean', 'standardize':0,\n",
     "            'inter_outlier_probabilistic_removal': False}\n",
-    "    bestparm = {'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_probabilistic_removal': False, \n",
-    "            'inter_outlier_threshold': 0.7433835019772639, 'intra_neighbors_mutual': True, \n",
-    "                'neighbors_intra_fraction': 0.5689801219518802, 'neighbors_total': 31.0}\n",
-    "    \n",
+    "\n",
+    "\n",
+    "    bestparm = {'neighbors_total': 27,\n",
+    "         'neighbors_intra_fraction': 0.2204608669516461,\n",
+    "         'inter_outlier_threshold': 0.7495085614413425,\n",
+    "         'inter_outlier_probabilistic_removal': 0,\n",
+    "         'intra_neighbors_mutual': 1,\n",
+    "         'copy_lsa_neighbors': 0,\n",
+    "         'add_tree': 0,\n",
+    "         'horizonCutoff': 60,\n",
+    "         'distance_metric': 'euclidean',\n",
+    "         'standardize': 0}\n",
     "    # parm = {'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_probabilistic_removal': False,  'inter_outlier_threshold': 0.72, 'intra_neighbors_mutual': False, 'neighbors_intra_fraction': 0, 'neighbors_total': 1}\n",
-    "    grap = scalp.mkgraph(dataset,**parm)\n",
+    "    grap = scalp.mkgraph(dataset,**bestparm)\n",
     "    # neggraph = sgraph.negstuff(dataset,**parm)\n",
     "    # scalp.umapwrap.graph_jax(dataset,(csr_matrix(grap), csr_matrix(neggraph)),label = 'umap', n_components = 2)\n",
+    "    print(\"graphdone\")\n",
     "    plt.matshow(grap.todense())\n",
+    "    plt.colorbar()\n",
     "    \n",
     "    projection  = scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
     "    # scalp.umapwrap.graph_pacmap(dataset,csr_matrix(grap).toarray(),label = 'umap', n_components = dim)\n",
@@ -264,7 +276,7 @@
     "    return dataset\n",
     "\n",
     "stack = Scalp(dataset)\n",
-    "scalp.plot(st,'scalp', color=['batch','label'])"
+    "scalp.plot(stack,'scalp', color=['batch','label'])"
    ]
   },
   {
@@ -623,6 +635,20 @@
     "d={4:99}\n",
     "d.setdefault(4,5)\n",
     "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0e1911d-7e1a-4e4c-b3bf-cb73ef948569",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# horizoncut test \n",
+    "d = np.random.rand(10,10)\n",
+    "co = 2\n",
+    "print(np.partition(d, co, axis=1)[:, co])\n",
+    "print(np.sort(d,axis=1))"
    ]
   },
   {
