--- a/notebooks/scalp_explore_params.ipynb
+++ b/notebooks/scalp_explore_params.ipynb
@@ -40,7 +40,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = ut.loadfile(\"/home/ubuntu/repos/cellsaw/application/res_scib1\")"
+    "#df = ut.loadfile(\"/home/ubuntu/repos/cellsaw/application/res_scib1\")\n",
+    "# application/optimization.py will run the optimization\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"/home/ubuntu/repos/cellsaw/application/out.csv\")\n",
+    "id = df.columns.tolist()\n",
+    "df.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebd3e15b-f8bb-409d-90cd-08ce7f2ef00c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da5f9905-b930-4640-ac9e-de0133bfd145",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import gmean"
    ]
   },
   {
@@ -50,13 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id = ['add_tree', 'copy_lsa_neighbors', 'inter_outlier_probabilistic_removal',\n",
-    "       'inter_outlier_threshold', 'intra_neighbors_mutual',\n",
-    "       'neighbors_intra_fraction', 'neighbors_total', 'dataset']\n",
-    "df.fillna(0, inplace=True)\n",
-    "df = df.melt(id_vars = id  ,  value_vars=['batch','label'], var_name='target', value_name='score')\n",
-    "id.remove('dataset')\n",
-    "pscores = pareto_scores(df, method = id)"
+    "\n"
    ]
   },
   {
@@ -65,7 +84,145 @@
    "id": "fef732cb-562d-4d73-8074-315a72e61010",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "id.remove('time')\n",
+    "id.remove('batch_std')\n",
+    "id.remove('label_std')\n",
+    "id.remove('label_mean')\n",
+    "id.remove('batch_mean')\n",
+    "# the idea is to put everyting into a score columns so we can just do geomean on tha one column \n",
+    "df = df.melt(id_vars = id ,  value_vars=['batch_mean','label_mean'], var_name='target', value_name='score')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76e61765-3d02-4fba-a255-eef86b52401b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scalp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fcc2736-e782-4a4d-b47d-f7b332d38a12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import gmean\n",
+    "# next we group by stuff by parameter combo\n",
+    "\n",
+    "grp = ['dim'] # this is added by the optimizer\n",
+    "for line in scalp.mkgraphParameters.split('\\n'):\n",
+    "    if line:\n",
+    "        grp.append(line.split(' ')[0])\n",
+    "\n",
+    "\n",
+    "grouped = df.groupby(grp)\n",
+    "\n",
+    "if False: # debug\n",
+    "    print (grp)\n",
+    "    pd.set_option('display.expand_frame_repr', False)\n",
+    "    for name in grouped.groups.keys():\n",
+    "        print(grouped.get_group(name))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "430835fe-c927-43eb-ae21-2597df1fa09e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for each group we want the keys and the geomean\n",
+    "data =[ list(key) + [gmean(group.score)] for key, group in grouped]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ef5fc7f-3635-4cbc-a10f-fbf7e6ae41cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# then we build a dataframe from this \n",
+    "columns = grp + ['score']\n",
+    "df3=pd.DataFrame(data, columns=columns)\n",
+    "df3=df3.sort_values(by='score')\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "396efd7e-4233-4386-8c2d-2d9470880f45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z= df3.loc[786].to_dict()\n",
+    "z.pop('dim')\n",
+    "z.pop('score')\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08f3a6e8-5a88-413f-b1dc-6930dd214dbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.PairGrid(df3, y_vars=['score'], x_vars=columns, height=4, aspect=1.5)\n",
+    "g.map(sns.scatterplot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fccfdcc-0931-49f6-9328-3d5c85b27fd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3[ (df3.score > .5)  &  (df3.copy_lsa_neighbors == 0) & (df3.intra_neighbors_mutual == 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8585f66f-553e-4cc3-af0b-70fd8be4b712",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(df3[ (df3.score > .5)  &  (df3.copy_lsa_neighbors == 0) & (df3.intra_neighbors_mutual == 1)], hue='score')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23a8146-5b5e-416f-9327-87bd17b32df7",
+   "metadata": {},
+   "source": [
+    "# HERE WE STOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ff63c66-3508-4829-8a6a-35d6aa6bd331",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id = df.columns.tolist()\n",
+    "pscores = pareto_scores(df, data=None,method = id)"
+   ]
   },
   {
    "cell_type": "code",
@@ -123,22 +280,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1776116a-2863-4cb6-9411-a93389bec59c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3062184c-e9dc-49b6-8502-f0788dbe91b1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28d0b875-17f7-4c41-8c81-7ce639868040",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -239,6 +380,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "44b9815b-2668-4b51-a3ae-4d623340367e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da88dc84-5d17-4f67-bebe-59b517354c13",
    "metadata": {},
    "outputs": [],
    "source": []
