sync latest stuff

--- a/notebooks/scalp_2dplot.ipynb
+++ b/notebooks/scalp_2dplot.ipynb
@@ -29,7 +29,19 @@
    "id": "4a946dcc-5f8b-402b-a4be-f70ff1e3dd2e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if True:\n",
+    "    import better_exceptions\n",
+    "    import sys\n",
+    "    ip = get_ipython()\n",
+    "    def custom_exc(shell, etype, evalue, tb, tb_offset=None):\n",
+    "        better_exceptions.excepthook(etype, evalue, tb)\n",
+    "    ip.set_custom_exc((Exception,), custom_exc)\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "warnings.filterwarnings(\"ignore\", module=\"anndata\")"
+   ]
   },
   {
    "cell_type": "code",
