--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
+    "        %load_ext autoreload\n",
     "%matplotlib inline\n",
     "%autoreload 2\n",
     "%config Completer.use_jedi = True\n",
@@ -77,10 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#datasets = scalp.data.loaddata_scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 1000 )\n",
-    "\n",
-    "datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 300 ))\n",
-    "dataset = datasets[-1] # this is the pancreatic"
+    "# datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 500 ))\n",
+    "datasets = list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,  maxdatasets=10,  maxcells = 500 ))\n",
+    "# timeseries 1 is difficult for others!!!!!!!!!!!!!!!!!\n"
    ]
   },
   {
@@ -89,7 +88,9 @@
    "id": "8434e443-a9b6-49d0-b0f9-278158cdd8bd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset = datasets[1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,6 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "import scanpy as sc\n",
     "\n",
     "\n",
@@ -165,6 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "import scanpy as sc\n",
     "\n",
     "'''\n",
@@ -198,6 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "import scanpy as sc\n",
     "'''\n",
     "def combat(dataset, dim = 2):\n",
@@ -229,19 +233,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scalp.plot(st, color=['batch','label'])"
+    "# scalp.plot(st, color=['batch','label'])\n",
+    "dataset\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1e25760-33eb-4ff3-ba6d-a55b168be9f3",
+   "id": "e2945716-5a95-4b36-8c3a-51f671007332",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87996d8d-9a07-48d0-95cc-568318645c68",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "import scanpy as sc\n",
     "from scalp import graph as sgraph\n",
     "from scipy.sparse import csr_matrix\n",
+    "import scalp.data.similarity as sim\n",
+    "import umap\n",
     "\n",
     "def Scalp(dataset, dim = 2):\n",
     "    parm = {'neighbors_total': 60, 'intra_neighbors_mutual': False,\n",
@@ -255,23 +271,34 @@
     "         'neighbors_intra_fraction': 0.2204608669516461,\n",
     "         'inter_outlier_threshold': 0.7495085614413425,\n",
     "         'inter_outlier_probabilistic_removal': 0,\n",
-    "         'intra_neighbors_mutual': 1,\n",
-    "         'copy_lsa_neighbors': 0,\n",
+    "         'intra_neighbors_mutual': 0,\n",
+    "         'copy_lsa_neighbors': 1,\n",
     "         'add_tree': 0,\n",
     "         'horizonCutoff': 60,\n",
     "         'distance_metric': 'euclidean',\n",
     "         'standardize': 0}\n",
     "    # parm = {'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_probabilistic_removal': False,  'inter_outlier_threshold': 0.72, 'intra_neighbors_mutual': False, 'neighbors_intra_fraction': 0, 'neighbors_total': 1}\n",
-    "    grap = scalp.mkgraph(dataset,**bestparm)\n",
+    "    # grap = scalp.mkgraph(dataset,**bestparm)\n",
+    "    stair =  sim.make_stairs(9,[0,1,2])\n",
+    "    # grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=stair)\n",
+    "    grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=None, ls = False)\n",
+    "    \n",
     "    # neggraph = sgraph.negstuff(dataset,**parm)\n",
     "    # scalp.umapwrap.graph_jax(dataset,(csr_matrix(grap), csr_matrix(neggraph)),label = 'umap', n_components = 2)\n",
     "    print(\"graphdone\")\n",
+    "    \n",
     "    plt.matshow(grap.todense())\n",
     "    plt.colorbar()\n",
     "    \n",
-    "    projection  = scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
-    "    # scalp.umapwrap.graph_pacmap(dataset,csr_matrix(grap).toarray(),label = 'umap', n_components = dim)\n",
-    "    # scalp.umapwrap.graph_umap(dataset,grap,label = 'umap', n_components = dim) # THIS IS WHAT WE WANT TO USE I GUESS\n",
+    "    # projection  = scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
+    "    \n",
+    "    projection = umap.UMAP(n_neighbors = 20).fit_transform(grap)\n",
+    "    \n",
+    "    # projection = umap.UMAP(metric='precomputed', n_neighbors = 60).fit_transform(grap > 0)\n",
+    "    \n",
+    "    # projection = scalp.umapwrap.graph_pacmap2(False,csr_matrix(grap),label = 'umap', n_components = dim)\n",
+    "    # projection = scalp.umapwrap.graph_umap(False,grap,label = 'umap', n_components = dim) # THIS IS WHAT WE WANT TO USE I GUESS\n",
+    "    print(\"umap done\")\n",
     "    dataset.obsm['scalp']= projection\n",
     "    return dataset\n",
     "\n",
