new benchmark data reading

--- a/notebooks/scalp_demo.ipynb
+++ b/notebooks/scalp_demo.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "        %load_ext autoreload\n",
+    " %load_ext autoreload\n",
     "%matplotlib inline\n",
     "%autoreload 2\n",
     "%config Completer.use_jedi = True\n",
@@ -47,24 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ec783de-b455-4e8a-bf84-a5b31bd76926",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29cef8c8-3b23-4903-97b8-ad172c2153eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scalp.test_config.scib_datapath"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3e96b637-db8a-4b74-be10-baf86fab483e",
    "metadata": {},
    "outputs": [],
@@ -78,8 +60,18 @@
    "outputs": [],
    "source": [
     "# datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 500 ))\n",
-    "datasets = list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,  maxdatasets=10,  maxcells = 500 ))\n",
+    "datasets = list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,  maxdatasets=3,  maxcells = 500 ))\n",
     "# timeseries 1 is difficult for others!!!!!!!!!!!!!!!!!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "114287aa-7ef5-479e-81c4-c1ddc5814bdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(datasets)"
    ]
   },
   {
@@ -89,7 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = datasets[1]"
+    "\n",
+    "dataset = datasets[4]"
    ]
   },
   {
@@ -158,6 +151,14 @@
     "# st = scalp.mnn.umaponly(dataset, dim=2)\n",
     "# st.obsm['umaponly'] = st.obsm['']\n",
     "scalp.plot(st,'pca40', color=['batch','label'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e48dd52a-fabe-412a-9c19-1a25283d0f08",
+   "metadata": {},
+   "source": [
+    "# BBKNN"
    ]
   },
   {
@@ -279,8 +280,8 @@
     "         'standardize': 0}\n",
     "    # parm = {'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_probabilistic_removal': False,  'inter_outlier_threshold': 0.72, 'intra_neighbors_mutual': False, 'neighbors_intra_fraction': 0, 'neighbors_total': 1}\n",
     "    # grap = scalp.mkgraph(dataset,**bestparm)\n",
-    "    stair =  sim.make_stairs(9,[0,1,2])\n",
-    "    # grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=stair)\n",
+    "    stair =  sim.make_stairs(3,[0,1])\n",
+    "    # grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=stair, ls=False)\n",
     "    grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=None, ls = False)\n",
     "    \n",
     "    # neggraph = sgraph.negstuff(dataset,**parm)\n",
