demo2 working nicely

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -50,9 +50,7 @@
    "id": "3e96b637-db8a-4b74-be10-baf86fab483e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "datasets"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -267,6 +265,13 @@
     "import scalp.data.similarity as sim\n",
     "import umap\n",
     "\n",
+    "def setup_grid(ax, dataset):\n",
+    "    counts = pd.Series(dataset.obs['batch']).value_counts()\n",
+    "    ticks = np.cumsum([0] + counts).to_list()\n",
+    "    ax.set_xticks(ticks)\n",
+    "    ax.set_yticks(ticks)\n",
+    "    ax.grid(True, color='white', linestyle='--', linewidth=0.5)\n",
+    "\n",
     "def Scalp(dataset, dim = 2):\n",
     "    parm = {'neighbors_total': 60, 'intra_neighbors_mutual': False,\n",
     "            'neighbors_intra_fraction': .33, 'add_tree': False, \"epsilon\":-1,\n",
@@ -289,19 +294,20 @@
     "    # grap = scalp.mkgraph(dataset,**bestparm)\n",
     "    # stair =  sim.make_stairs(3,[0,1])\n",
     "    # grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=stair, ls=False)\n",
-    "    grap = scalp.graph.integrate(dataset, k=3, dataset_adjacency=None, ls = False)\n",
+    "    grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=None, ls = False, outlier_threshold=.9)\n",
     "\n",
-    "    grap = grap.astype(bool)\n",
+    "    # grap = grap.astype(bool)\n",
     "    # neggraph = sgraph.negstuff(dataset,**parm)\n",
     "    # scalp.umapwrap.graph_jax(dataset,(csr_matrix(grap), csr_matrix(neggraph)),label = 'umap', n_components = 2)\n",
     "    print(\"graphdone\")\n",
     "    \n",
     "    plt.matshow(grap.todense())\n",
+    "    setup_grid(plt.gca(), dataset)\n",
     "    plt.colorbar()\n",
     "    \n",
     "    # projection  = scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
     "    \n",
-    "    projection = umap.UMAP(n_neighbors = 20).fit_transform(grap)\n",
+    "    projection = umap.UMAP(n_neighbors = 10).fit_transform(grap)\n",
     "    \n",
     "    # projection = umap.UMAP(metric='precomputed', n_neighbors = 60).fit_transform(grap > 0)\n",
     "    \n",
