--- a/notebooks/scalp_explore_params.ipynb
+++ b/notebooks/scalp_explore_params.ipynb
@@ -22,6 +22,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74f99187-33c6-40cc-a1a4-9ae0e4e7a015",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%connect_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e8586ceb-e6aa-4ab2-8cd0-9c033462b3f0",
    "metadata": {},
    "outputs": [],
@@ -55,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.corr()"
+    "df.corr()\n"
    ]
   },
   {
@@ -65,7 +75,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import gmean"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "# sc22 = sc2.pivot(index=\"method\", columns=\"dataset\", values=\"batch_mean\")\n",
+    "# geomean = np.sqrt(df.label_mean * df.batch_mean)\n",
+    "# df['geomean'] = geomean\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f46fdef0031feea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ee = 'label_mean\tlabel_std\tbatch_std batch_mean\ttime'.split()\n",
+    "# df =df.drop(labels = ee, axis =1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddad5f17-40eb-4b28-a685-8e04f15c5b89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = [col for col in df.columns.tolist() if col != 'geomean']\n",
+    "cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eef27de-8071-45da-99ed-beb2ab4990a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sort_values(by='score', ascending=False)\n"
    ]
   },
   {
@@ -75,7 +123,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
+    "# sns.pairplot(df, hue='geomean')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "'''\n",
+    "outlier_threshold\n",
+    "k\n",
+    "hub1/2 algo k\n",
+    "'''\n",
+    "sns.lineplot(df, y='score', x= 'outlier_threshold') \n",
+    "plt.show()\n",
+    "sns.lineplot(df, y='score', x= 'k') \n",
+    "plt.show()\n",
+    "sns.lineplot(df, y='score', x= 'hub1_k', hue = 'hub1_algo') \n",
+    "plt.show()\n",
+    "sns.lineplot(df, y='score', x= 'hub2_k', hue = 'hub2_algo') \n",
+    "\n",
+    "plt.show()\n",
+    "sns.boxplot(df, y='score', x= 'hub2_algo') \n",
+    "plt.show()\n",
+    "sns.boxplot(df, y='score', x= 'hub1_algo') \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06c29064-ee8d-4931-867f-0ded01c5f633",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sort_values(by='geomean', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbae74e5-78a3-40a4-bbd5-87a9133cc4a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(df, y= 'geomean', x = 'hub1_algo', hue='hub2_algo') \n",
+    "# k -> 10 .. 15 11 seems good\n",
+    "# outlier threshold 0.76\n",
+    "\n",
+    "df.corr()"
    ]
   },
   {
