--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -62,8 +62,8 @@
     "maxdatasets = 5 # USE THIS EVERYWHERE\n",
     "maxcells = 500\n",
     "datasets = list(scalp.data.scmark(scalp.test_config.scmark_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
-    "datasets += list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,  maxdatasets=maxdatasets,  maxcells = 500 ))\n",
-    "datasets +=list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=maxdatasets,  maxcells = 500 ))\n",
+    "datasets += list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
+    "datasets +=list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
     "\n",
     "# datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 500 ))\n",
     "# timeseries 1 is difficult for others!!!!!!!!!!!!!!!!!\n"
@@ -264,6 +264,7 @@
     "from scipy.sparse import csr_matrix\n",
     "import scalp.data.similarity as sim\n",
     "import umap\n",
+    "import pandas as pd\n",
     "\n",
     "def setup_grid(ax, dataset):\n",
     "    counts = pd.Series(dataset.obs['batch']).value_counts()\n",
@@ -294,23 +295,28 @@
     "    # grap = scalp.mkgraph(dataset,**bestparm)\n",
     "    # stair =  sim.make_stairs(3,[0,1])\n",
     "    # grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=stair, ls=False)\n",
-    "    grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=None, ls = False, outlier_threshold=.9)\n",
     "\n",
+    "    grap = scalp.graph.integrate(dataset,hub1_algo = 4, hub1_k = 5, hub2_algo=3, hub2_k=12,  k=10, dataset_adjacency=None,  outlier_threshold=.65)\n",
+    "    #grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=None, ls =10, outlier_threshold=.9)\n",
+    "    # !!!!!!!!!!!!!!!!!!!!!!!!\n",
+    "    #  there are many options to expose and some hubness correctors to be implemented\n",
+    "    #\n",
+    "    #\n",
     "    # grap = grap.astype(bool)\n",
     "    # neggraph = sgraph.negstuff(dataset,**parm)\n",
     "    # scalp.umapwrap.graph_jax(dataset,(csr_matrix(grap), csr_matrix(neggraph)),label = 'umap', n_components = 2)\n",
     "    print(\"graphdone\")\n",
     "    \n",
-    "    plt.matshow(grap.todense())\n",
-    "    setup_grid(plt.gca(), dataset)\n",
-    "    plt.colorbar()\n",
+    "    # plt.matshow(grap.todense())\n",
+    "    # setup_grid(plt.gca(), dataset)\n",
+    "    # jplt.colorbar()\n",
     "    \n",
-    "    # projection  = scalp.umapwrap.umap_last_experiment(dataset,grap,label = 'umap', n_components = dim)\n",
-    "    \n",
+    "\n",
     "    projection = umap.UMAP(n_neighbors = 10).fit_transform(grap)\n",
     "    \n",
     "    # projection = umap.UMAP(metric='precomputed', n_neighbors = 60).fit_transform(grap > 0)\n",
     "    \n",
+    "    # projection  = scalp.umapwrap.umap_last_experiment(dataset, grap ,label = 'umap', n_components = dim)\n",
     "    # projection = scalp.umapwrap.graph_pacmap2(False,csr_matrix(grap),label = 'umap', n_components = dim)\n",
     "    # projection = scalp.umapwrap.graph_umap(False,grap,label = 'umap', n_components = dim) # THIS IS WHAT WE WANT TO USE I GUESS\n",
     "    print(\"umap done\")\n",
@@ -319,8 +325,11 @@
     "    dataset.uns['integrated'].append('scalp')\n",
     "    return dataset\n",
     "\n",
-    "stack = Scalp(dataset)\n",
-    "scalp.plot(stack,'scalp', color=['batch','label'])"
+    "# stack = Scalp(dataset)\n",
+    "#scalp.plot(stack,'scalp', color=['batch','label'])\n",
+    "for d in datasets:\n",
+    "    stack = Scalp(d)\n",
+    "    scalp.plot(stack,'scalp', color=['batch','label'])"
    ]
   },
   {
@@ -603,6 +612,17 @@
    "id": "78016937-15d7-414c-92cc-f4597d244e68",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "pd.set_option('display.max_rows', 1000) \n",
+    "df_melted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc74ce8d-7cd8-4257-8444-68a29e4eca4a",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -614,6 +634,7 @@
    "source": [
     "groupby = 'group' # 'dataset'\n",
     "groupby = 'dataset' # 'dataset'\n",
+    "df_melted  = df_melted[df_melted.group=='batch']\n",
     "avg_rank = df_melted.groupby('dataset').score.rank(pct=True).groupby(df_melted.method).mean()\n",
     "# avg_rank = df_melted.groupby(groupby).score.rank(pct=True).groupby(df_melted.method).mean()\n",
     "import scikit_posthocs as sp\n",
