moving optimizer, experimenting with my nutype optimizer

--- a/notebooks/scalp_explore_params.ipynb
+++ b/notebooks/scalp_explore_params.ipynb
@@ -457,7 +457,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "warnings.filterwarnings(\"ignore\", module=\"anndata\")\n",
+    "warnings.filterwarnings(\"ignore\", message=\".*Attempted to fork from a non-main thread.*\")\n"
    ]
   },
   {
@@ -492,7 +495,49 @@
    "id": "da88dc84-5d17-4f67-bebe-59b517354c13",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import optimization as opt\n",
+    "from ubergauss.optimization import nutype \n",
+    "data =opt.getdata()\n",
+    "d2 = [[d] for d in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80a08cbb-1dc5-4350-9319-e84ca4e499f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "o = nutype.nutype(opt.space, opt.ho_eval,d2, numsample=16 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e888ab0f-6190-499e-a416-207162d7aeaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "o.opti()\n",
+    "o.print()\n",
+    "o.opti()\n",
+    "o.print()\n",
+    "o.opti()\n",
+    "o.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94bbe3a9-8a81-4044-9c17-523753c617fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " {'hub1_algo': 1.0, 'hub1_k': 13.021210834947537, 'hub2_algo': 3.0, 'hub2_k': 11.274756377019376, 'k': 17.235099709198174, 'outlier_threshold': 0.6046280880758059, 'datafield': 0.0, 'time': 253.87748432159424, 'score': 0.4716044284270298}"
+   ]
   }
  ],
  "metadata": {
