socoring can now skip lines

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -60,10 +60,12 @@
    "outputs": [],
    "source": [
     "maxdatasets = 5 # USE THIS EVERYWHERE\n",
-    "maxcells = 500\n",
+    "maxcells = 1000\n",
     "datasets = list(scalp.data.scmark(scalp.test_config.scmark_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
     "datasets += list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
     "datasets +=list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
+    "\n",
+    "\n",
     "\n",
     "# datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 500 ))\n",
     "# timeseries 1 is difficult for others!!!!!!!!!!!!!!!!!\n"
@@ -193,6 +195,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea508dfd-dc66-4419-94e8-dfa555646aaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st.uns['neighbors']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e7bb6d0e-400c-4921-8fec-56e48465e7d0",
    "metadata": {},
@@ -223,6 +235,14 @@
     "st = scalp.mnn.combat(dataset) \n",
     "scalp.plot(st,'combat', color=['batch','label'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31df885c-0dfc-4d06-a70f-e0c4c048f0ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -273,7 +293,7 @@
     "    ax.set_yticks(ticks)\n",
     "    ax.grid(True, color='white', linestyle='--', linewidth=0.5)\n",
     "\n",
-    "def Scalp(dataset, dim = 2):\n",
+    "def Scalp(dataset, dim = 2, ot= .64):\n",
     "    parm = {'neighbors_total': 60, 'intra_neighbors_mutual': False,\n",
     "            'neighbors_intra_fraction': .33, 'add_tree': False, \"epsilon\":-1,\n",
     "                  'copy_lsa_neighbors': False, 'horizonCutoff':0, # this hz cutoff is what we look at \n",
@@ -296,7 +316,10 @@
     "    # stair =  sim.make_stairs(3,[0,1])\n",
     "    # grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=stair, ls=False)\n",
     "\n",
-    "    grap = scalp.graph.integrate(dataset,hub1_algo = 4, hub1_k = 5, hub2_algo=3, hub2_k=12,  k=10, dataset_adjacency=None,  outlier_threshold=.65)\n",
+    "    #grap = scalp.graph.integrate(dataset,hub1_algo = 3, hub1_k = 11, hub2_algo=0, hub2_k=12,  k=11, dataset_adjacency=None,  outlier_threshold=1)\n",
+    "    # grap = scalp.graph.integrate(dataset,hub1_algo = 3, hub1_k = 19, hub2_algo=3, hub2_k=17,  k=11, dataset_adjacency=None,  outlier_threshold=ot)\n",
+    "    grap = scalp.graph.integrate(dataset,hub1_algo = 1, hub1_k = 11, hub2_algo=2, hub2_k=4,  k=13, dataset_adjacency=None,  outlier_threshold=ot)\n",
+    "    grap = grap != 0\n",
     "    #grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=None, ls =10, outlier_threshold=.9)\n",
     "    # !!!!!!!!!!!!!!!!!!!!!!!!\n",
     "    #  there are many options to expose and some hubness correctors to be implemented\n",
@@ -305,47 +328,53 @@
     "    # grap = grap.astype(bool)\n",
     "    # neggraph = sgraph.negstuff(dataset,**parm)\n",
     "    # scalp.umapwrap.graph_jax(dataset,(csr_matrix(grap), csr_matrix(neggraph)),label = 'umap', n_components = 2)\n",
-    "    print(\"graphdone\")\n",
+    "    \n",
+    "    \n",
+    "    if  False:\n",
+    "        dataset.obsp['connectivities'] = grap\n",
+    "        dataset.obsp['distances'] = grap\n",
+    "        dataset.uns['neighbors'] =  {'params': {'n_neighbors': 15,\n",
+    "      'method': 'umap',\n",
+    "      'metric': 'euclidean',\n",
+    "      'n_pcs': 40,\n",
+    "      #'bbknn': {'trim': 150, 'computation': 'annoy', 'batch_key': 'batch'},\n",
+    "      'use_rep': 'pca40'},\n",
+    "     'distances_key': 'distances',\n",
+    "     'connectivities_key': 'connectivities'}\n",
+    "        sc.tl.umap(dataset,n_components=2)\n",
+    "        grap = dataset.obsm.pop('X_umap')\n",
+    "\n",
+    "\n",
     "    \n",
     "    # plt.matshow(grap.todense())\n",
     "    # setup_grid(plt.gca(), dataset)\n",
     "    # jplt.colorbar()\n",
     "    \n",
-    "\n",
-    "    projection = umap.UMAP(n_neighbors = 10).fit_transform(grap)\n",
+    "    # projection = umap.UMAP(n_neighbors = 10).fit_transform(grap)\n",
     "    \n",
     "    # projection = umap.UMAP(metric='precomputed', n_neighbors = 60).fit_transform(grap > 0)\n",
-    "    \n",
     "    # projection  = scalp.umapwrap.umap_last_experiment(dataset, grap ,label = 'umap', n_components = dim)\n",
     "    # projection = scalp.umapwrap.graph_pacmap2(False,csr_matrix(grap),label = 'umap', n_components = dim)\n",
     "    # projection = scalp.umapwrap.graph_umap(False,grap,label = 'umap', n_components = dim) # THIS IS WHAT WE WANT TO USE I GUESS\n",
-    "    print(\"umap done\")\n",
-    "    dataset.obsm['scalp']= projection\n",
+    "    # print(\"umap done\")\n",
+    "    dataset.obsm['scalp']= grap\n",
     "    dataset.uns.setdefault('integrated',[])\n",
     "    dataset.uns['integrated'].append('scalp')\n",
     "    return dataset\n",
     "\n",
-    "# stack = Scalp(dataset)\n",
-    "#scalp.plot(stack,'scalp', color=['batch','label'])\n",
-    "for d in datasets:\n",
-    "    stack = Scalp(d)\n",
-    "    scalp.plot(stack,'scalp', color=['batch','label'])"
+    "if True:\n",
+    "    stack = Scalp(dataset)\n",
+    "    scalp.plot(stack,'scalp', color=['batch','label'])\n",
+    "else:\n",
+    "    for d in datasets:\n",
+    "        stack = Scalp(d)\n",
+    "        scalp.plot(stack,'scalp', color=['batch','label'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc9e7a6d-586e-4f09-9e19-634e8d6d00ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28e58bd8-dcb8-444f-8bed-82e92e388bd4",
+   "id": "d4303999-267d-4893-a653-605d80cc4527",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -359,8 +388,12 @@
    "source": [
     "import ubergauss.tools as ut\n",
     "from lmz import *\n",
+    "import functools \n",
     "\n",
     "funcs = [scalp.mnn.scanorama, scalp.mnn.bbknnwrap, scalp.mnn.combat, Scalp] \n",
+    "\n",
+    "for ot in [.35, .45, .55, .75, .85]:\n",
+    "    funcs.append( functools.partial(Scalp, ot=ot))\n",
     "\n",
     "fuid = Range(funcs)\n",
     "dataid = Range(datasets) \n",
@@ -379,38 +412,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71c71f0a-ac03-40f0-a6d6-f4c903b2c377",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d53eec65-6549-44d7-9258-217762a648dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "#for ot in [.35, .45, .55, .75, .85]:\n",
+    "fnames = 'scanorama bbknn combat scalp s.35 s.45 s.55 s.75 s.85'.split()\n",
     "# datasets_stack = Map(scalp.transform.stack, datasets) \n",
     "for (fu,da), result in zip(tasks, mydata):\n",
-    "    method = result.uns['integrated'][0]\n",
-    "    # print(method)\n",
-    "    datasets[da].obsm[method] = result.obsm[method]\n",
+    "    method = fnames[fu]#result.uns['integrated'][0]\n",
+    "    rmeth = method\n",
+    "    if fu > 3:\n",
+    "        rmeth = 'scalp'\n",
+    "    # print(fu)\n",
+    "    datasets[da].obsm[method] = result.obsm[rmeth]\n",
     "    datasets[da].uns.setdefault('methods', []).append(method)\n",
     "    datasets[da].uns.setdefault('integrated', []).append(method)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9840d2b5-ecdf-4cc4-ab3e-f2e91779a3f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datasets[0]"
    ]
   },
   {
@@ -426,7 +446,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2fe9e30-6c02-4df6-bd58-f648234071e3",
+   "id": "17c351c5-3a4e-414d-b1f2-43dddaa1ed00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.stats import gmean\n",
+    "\n",
+    "def compute_method_ranks(data, methods):\n",
+    "    rows = []\n",
+    "    for ds, methods_dict in data.items():\n",
+    "        for meth, scores in methods_dict.items():\n",
+    "            if meth in methods:\n",
+    "                label = scores['label_mean']\n",
+    "                batch = scores['batch_mean']\n",
+    "                geo = gmean([label, batch])\n",
+    "                rows.append({'dataset': ds, 'method': meth,\n",
+    "                             'label': label, 'batch': batch, 'geomean': geo})\n",
+    "    df = pd.DataFrame(rows)\n",
+    "    \n",
+    "    # Rank within each dataset (lower rank = better)\n",
+    "    ranks = df.groupby('dataset')[['label', 'batch', 'geomean']].rank(ascending=False)\n",
+    "    df[['label_rank', 'batch_rank', 'geo_rank']] = ranks\n",
+    "    \n",
+    "    # Average ranks per method\n",
+    "    avg_ranks = df.groupby('method')[['label_rank', 'batch_rank', 'geo_rank']].mean()\n",
+    "    return avg_ranks\n",
+    "\n",
+    "base = fnames[:3]\n",
+    "for e in fnames[3:]:\n",
+    "    ffnames = base.copy()+[e]\n",
+    "    zzzz = compute_method_ranks(scores, ffnames)\n",
+    "    print(zzzz)\n",
+    "zzzz = compute_method_ranks(scores, fnames)\n",
+    "zzzz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bd36544-ef11-4fb0-bcfa-26aef1a0c826",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,13 +560,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "330879d1-d683-4d26-a964-f81ad4a57000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "80973ababa91fb5f",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "\n",
+    "palette = {\n",
+    "        \"scanorama\": \"red\",\n",
+    "    \"bbknn\": \"green\",\n",
+    "    \"combat\": \"purple\",\n",
+    "   \"s.35\": \"#0f3e5a\",  # very dark blue (was s.3)\n",
+    "    \"s.45\": \"#165a87\",  # dark blue (was s.2)\n",
+    "    \"s.55\": \"#1f77b4\",  # medium blue (was scalp.4)\n",
+    "    \"scalp\": \"#5faee3\",  # lighter blue (was scalp)\n",
+    "    \"s.75\": \"#a7cce5\",  # even lighter blue (was scalp.75)\n",
+    "    \"s.85\": \"#dceefb\"   # very light blue (was scalp1)\n",
+    "}\n",
     "z = pd.DataFrame(scores2)\n",
-    "sns.scatterplot(z,x='label_mean', y= 'batch_mean', hue = \"method\", legend=True)\n"
+    "\n",
+    "ax = sns.scatterplot(z,x='label_mean', y= 'batch_mean', hue = \"method\",palette = palette, legend=True)\n",
+    "ax.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0.)\n",
+    "plt.show()\n",
+    "z_avg = z.groupby(\"method\", as_index=False)[[\"label_mean\", \"batch_mean\"]].mean()\n",
+    "ax = sns.scatterplot(z_avg,x='label_mean', y= 'batch_mean', hue = \"method\",palette = palette, legend=True)\n",
+    "ax.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0.)\n",
+    "plt.show()\n",
+    "\n",
+    "z_stats = z.groupby(\"method\").agg({\n",
+    "    \"label_mean\": [\"mean\", \"std\"],\n",
+    "    \"batch_mean\": [\"mean\", \"std\"]\n",
+    "}).reset_index()\n",
+    "\n",
+    "# Flatten MultiIndex columns\n",
+    "z_stats.columns = [\"method\", \"label_mean\", \"label_std\", \"batch_mean\", \"batch_std\"]\n",
+    "\n",
+    "# Step 2: Plot with error bars\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Scatter plot with error bars\n",
+    "for _, row in z_stats.iterrows():\n",
+    "    ax.errorbar(\n",
+    "        x=row[\"label_mean\"],\n",
+    "        y=row[\"batch_mean\"],\n",
+    "        xerr=row[\"label_std\"],\n",
+    "        yerr=row[\"batch_std\"],\n",
+    "        fmt='o', \n",
+    "        label=row[\"method\"],\n",
+    "        color=palette[row[\"method\"]] if row[\"method\"] in palette else None\n",
+    "    )\n",
+    "\n",
+    "# Customize legend\n",
+    "ax.legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\", borderaxespad=0.)\n",
+    "ax.set_xlabel(\"label_mean\")\n",
+    "ax.set_ylabel(\"batch_mean\")"
    ]
   },
   {
@@ -565,7 +682,9 @@
    "id": "dda0c3f2-1e60-4862-bc20-dea710f5fddc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_melted"
+   ]
   },
   {
    "cell_type": "code",
@@ -593,9 +712,11 @@
     "for i, day in enumerate(means.index):\n",
     "    plt.scatter(i, means[day], color='black', marker='x', s=50, label='Mean' if i == 0 else \"\")\n",
     "\n",
-    "g.set_xticklabels(rotation=45) # ha='right' is useful here too\n",
+    "g.set_xticklabels(rotation=45, labels = np.unique(df_melted.method)) # ha='right' is useful here too\n",
     "plt.show()\n",
-    "sns.boxplot( data=df_melted, x=\"method\", y=\"score\", hue =\"group\")# native_scale=True, zorder=1 )"
+    "g = sns.boxplot( data=df_melted, x=\"method\", y=\"score\", hue =\"group\")# native_scale=True, zorder=1 )\n",
+    "g.set_xticklabels(rotation=45, labels = np.unique(df_melted.method)) # ha='right' is useful here too\n",
+    "plt.show()"
    ]
   },
   {
@@ -1025,6 +1146,22 @@
     "\n",
     "plt.plot(data[0])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b45bf27d-b92f-4ed2-85f5-40717586068c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bae616e-224c-4c46-ba7e-2d4d123e56e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
