--- a/notebooks/scalp_explore_params.ipynb
+++ b/notebooks/scalp_explore_params.ipynb
@@ -497,7 +497,7 @@
    "outputs": [],
    "source": [
     "import optimization as opt\n",
-    "from ubergauss.optimization import nutype \n",
+    "from ubergauss.optimization import gatype , nutype\n",
     "data =opt.getdata()\n",
     "d2 = [[d] for d in data]"
    ]
@@ -505,12 +505,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80a08cbb-1dc5-4350-9319-e84ca4e499f2",
+   "id": "4a2b2e01-697d-49e1-b278-eae3b82686a5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import optimization as opt\n",
+    "from ubergauss.optimization import gatype , nutype, grid1type\n",
+    "res = []\n",
+    "for _ in range(5): \n",
+    "    data =opt.getdata()\n",
+    "    r=[]\n",
     "\n",
-    "o = nutype.nutype(opt.space, opt.ho_eval,d2, numsample=16 )"
+    "    o = gatype.nutype(opt.space, opt.ho_eval,d2, numsample=16, floatavg = 1)\n",
+    "    for _ in range(5): o.opti()\n",
+    "    r.append(o.getmax())\n",
+    "    \n",
+    "    res.append(r)\n",
+    "    continue\n",
+    "    print(\"FEHL\")\n",
+    "    \n",
+    "    \n",
+    "    o = gatype.nutype(opt.space, opt.ho_eval,d2, numsample=16, floatavg=0)\n",
+    "    for _ in range(5): o.opti()\n",
+    "    r.append(o.getmax()) \n",
+    "    \n",
+    "    o = nutype.nutype(opt.space, opt.ho_eval,d2, numsample=16)\n",
+    "    for _ in range(5): o.opti()\n",
+    "    r.append(o.getmax())\n",
+    "    \n",
+    "    r.append(nutype.nutype(opt.space, opt.ho_eval,d2, numsample=80).opti().getmax())\n",
+    "    res.append(r)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bdcb3e3-836c-45e4-879c-3c1c1ccc186f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(res).mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a52ff49-6f47-413a-a7b1-2088f89cb90a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.mean(res))"
    ]
   },
   {
@@ -522,9 +567,57 @@
    "source": [
     "%%time\n",
     "o.opti()\n",
-    "o.print()\n",
+    "o.print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66bb81c0-db93-488f-ad7a-1871380362db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import optimization as opt\n",
+    "d2 = opt.getdata(750,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80a08cbb-1dc5-4350-9319-e84ca4e499f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "from ubergauss.optimization import gatype , nutype, grid1type\n",
+    "o = gatype.nutype(opt.space, opt.ho_eval,d2[:1], numsample=32, hyperband = [])\n",
+    "# o = nutype.nutype(opt.space, opt.ho_eval,d2, numsample=16, hyperband = [])\n",
     "o.opti()\n",
     "o.print()\n",
+    "# 1 1 19 .65"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aa93940-acc5-4f3b-86ee-c18ab3e274d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "#o = gatype.nutype(opt.space, opt.ho_eval,d2, numsample=16)\n",
+    "o.opti()\n",
+    "o.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c03c296-11f6-4275-8ea8-459c68c43840",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "o.opti()\n",
     "o.print()"
    ]
@@ -538,6 +631,14 @@
    "source": [
     " {'hub1_algo': 1.0, 'hub1_k': 13.021210834947537, 'hub2_algo': 3.0, 'hub2_k': 11.274756377019376, 'k': 17.235099709198174, 'outlier_threshold': 0.6046280880758059, 'datafield': 0.0, 'time': 253.87748432159424, 'score': 0.4716044284270298}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be2b0f74-beca-4817-b3fb-5a599c8a0e8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
